ghc-4335c07/testsuite/tests/dependent/should_fail/T13135.stderr

T13135.hs:60:10: error:
    • No instance for (Constr :<: Constr)
        arising from a use of ‘smartSym’
    • In the expression: smartSym sym
      In an equation for ‘arrLen’:
          arrLen
            = smartSym sym
            where
                sym = Constr "arrLen"
